Hugin 2016.2
* Allow reading of image positions from Papywizard XML files.
* Internal blender and verdandi got the possibility to blend seams as alternative to
  current hard seam.

============================================================================================
Hugin 2016.0
* Added user defined output. The user can define own output sequences to implement
  new use cases, e.g. zero noise output.
* Added --clip-exposure switch to nona to automatically mask over and under exposed
  areas in input images.
* Color management
   ** GUI tools (Hugin, calibrate_lens_gui) take ICC profiles in files and monitor 
      color profile into account to display images.
   ** celeste and cpfind converts internal image to sRGB before working.
* Some buttons got a context menu for easier access to some function
  ** Show all in fast preview window to allow better interaction with stacked projects
  ** Celeste in cp tab: the button can now create cp or clean cp  
* Updated internal levmar library to version 2.6
* The identify tool in the fast preview window shows now also the image numbers on top
  of the images. (This can be suppressed by pressing the alt button).
* Fixes internal image format for GPU remapping. This should fix the "unsupported
  framebufferformat" error.
* Use own code for OpenGL intialization. Now freeglut is not needed anymore.
  (This should prevent the appearing of window when running "nona -g". Linux/Window only)
* Control point and mask editor retain viewpoint when changing zoom factor.
* PTBatcherGUI: Minimize to tray is now user configurable.
* Fixes a bug in photometric optimizer and merge projects with line control points.

============================================================================================
Hugin 2015.0
* stability and speed improvements
* new stitching engine
* new blender verdandi
* own camera and lens database
* preview window: new tool to add or remove control points